fixed overlap issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .feature-container {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(8, 4, 4, 0.502);
   border-radius: 15px;
   transition: all 0.3s ease;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
